# turboquant-workflow-eval

./: .gitignore  Makefile  README.md  TREE.txt  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/backend_studies/: default.yaml  long_context.yaml
configs/backends/: qwen35_openai_server.yaml
configs/experiments/: preflight_stats.py  preflight_stats.yaml
configs/model/: qwen25_3b.py  qwen25_3b.yaml  qwen35_9b_text_only.py  qwen35_9b_text_only.yaml  qwen3_8b.py  qwen3_8b.yaml
configs/models/: qwen3_8b.yaml
docs/: HANDOFF.md  adapter-interface.md  algorithm-comparison.md  architecture-facts.md  backend-study.md  current-runpod-state.md  manual-runbook.md  review-data-workflow.md  runpod-setup.md  study-scope.md
prompts/: long_context_workflow_prompts.yaml  workflow_prompts.yaml
scripts/: bootstrap_runpod.sh  download_model.py  generate_cli_docs.py  generate_prompts.py  list_attention_blocks.py  probe_openai_backend.py  run_backend_study.py  run_preflight_stats.py  run_workflow_study.py  validate_environment.py
tests/: conftest.py  test_adapter.py  test_backend_study.py  test_cli_docs.py  test_code_runner.py  test_config.py  test_config_validation.py  test_download.py  test_generation.py  test_import_utils.py  test_layout_schema.py  test_loader.py  test_local_patch_adapter.py  test_model_loader.py  test_module_discovery.py  test_openai_backend.py  test_policy_overrides.py  test_prompts.py  test_reporting.py  test_reset_and_baseline.py  test_schema.py  test_scoring.py  test_stats.py  test_study.py  test_turboquant_adapter.py
(+63 files in other folders)
