[project]
name = "turboquant-workflow-eval"
version = "0.3.0"
description = "Model-agnostic test, implementation, and benchmarking framework for TurboQuant-style KV-cache compression."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
eval = ["sentence-transformers>=2.0"]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests", "vendor/turboquant-core/tests"]
pythonpath = ["src", "vendor/turboquant-core/src"]
